@@ -7,5 +7,7 @@
 - Do not check the members with ignored roles
 - Bug fixes
     - Add channel permission check
+    - Logic to determine the members to be kicked
 - Use paginator to overcome the page limit
 - Check whether the member has the ignored roles in the setup command
+- Improved show kick command
